--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "autoprefixer": "^10.4.16",
     "jsdom": "^27.4.0",
     "postcss": "^8.4.31",
+    "tailwind-dracula": "^1.1.1",
     "tailwindcss": "^3.3.5",
     "vite": "^7.3.1",
     "vitest": "^4.0.17"
